--- a/templates/detail.html
+++ b/templates/detail.html
@@ -127,24 +127,28 @@
         location.href = "/";
       });
 
-      // 綁定事件到元素
-      $('#btnAdd').on('click', addNewRow);
+      // 處理檔案上傳
       $('#btnFileUpdate').on('click', function () {
         $('#fileInput').trigger('click');
       });
       $('#fileInput').on('change', handleFile);
-
-      if ($('#hidId').val() != "") {
-        jsondata_from_server.prompts.forEach(element => {
-          element.mode = "";
-          addNewRow(element);
-        });
+      async function handleFile(event) {
+        var files = event.target.files[0];
+        var reader = new FileReader();
+        reader.onloadend = (function (file) {
+          return function (evt) {
+            var baseSplit = evt.target.result.split(",");
+            var base64 = baseSplit[1];
+            uploadFile(file, base64);
+          };
+        })(files);
+        reader.readAsDataURL(files);
       }
 
       var jsondata = jsondata_from_server.prompts
 
       // 初始化 DataTable
-      dataTable = $('#table2').DataTable({
+      dataTable = $('#table1').DataTable({
         data: jsondata,
         columns: [
           { // 序號
@@ -245,37 +249,39 @@
       });
 
       //按鈕事件
-      $("#table2").on('click', ".btnAdjust", function (e) {
+      $("#table1").on('click', ".btnAdjust", function (e) {
         const textarea = $(this).closest('tr').find('textarea');
         if (textarea.length) {
           textarea.css('height', 'auto').css('height', textarea[0].scrollHeight + 'px');
         }
-        // adjustTextareaHeight();
       }).on('click', ".btnShrink", function (e) {
         const textarea = $(this).closest('tr').find('textarea');
         if (textarea.length) {
           textarea.css('height', '').attr('rows', 3);
         }
       }).on('click', ".btnDel", function (e) {
-        // 使用 $(this) 取得被點擊的按鈕
         $(this).closest('tr').remove();
-        $('#table2 tbody tr').each(function (index) {
+        $('#table1 tbody tr').each(function (index) {
           $(this).find('td:first').text(index + 1);
         });
-      }).on('click', '.file-remove-btn', function () {
+      });
+
+      //移除檔案
+      $("#table1").on('click', '.file-remove-btn', function () {
         // 找到最接近的 .file-container 父元素並隱藏它
         $(this).closest('.file-container').hide();
       });
 
-      $('#table2 thead').on('change', '#selectAllRows', function () {
+      //勾選事件
+      $('#table1 thead').on('change', '#selectAllRows', function () {
         const isChecked = $(this).prop('checked');
         // 遍歷所有列的 checkbox，並將它們的狀態設為與全選 checkbox 相同
         dataTable.rows().every(function () {
           $(this.node()).find('input[name="selectRow"]').prop('checked', isChecked);
         });
       });
-      // 監聽個別列 checkbox 的點擊事件
-      $('#table2 tbody').on('change', 'input[name="selectRow"]', function () {
+      // 監聽個別 checkbox 的點擊事件
+      $('#table1 tbody').on('change', 'input[name="selectRow"]', function () {
         // 檢查是否有未勾選的 checkbox
         const allChecked = $('input[name="selectRow"]').length === $('input[name="selectRow"]:checked').length;
         // 更新標題欄全選 checkbox 的狀態
@@ -284,22 +290,8 @@
 
       $('#btnSave').click(async function () {
         var jsonArray = []
-        $("#tablebody tr").each(function () {
-          const currentRow = $(this);
-          const seqno = currentRow.find("select[name='lstSeqNo']").val();
-          const content = currentRow.find("textarea[name='content']").val();
-          const type = currentRow.find("input[name='hidType']").val();
-          const mode = currentRow.find("input[name='hidMode']").val();
 
-          var jsonObject = {};
-          jsonObject.seqno = seqno;
-          jsonObject.type = type;
-          jsonObject.content = content;
-          jsonObject.mode = mode;
-          // jsonArray.push(jsonObject);
-        });
-
-        $("#table2 tbody tr").each(function () {
+        $("#table1 tbody tr").each(function () {
           const currentRow = $(this);
           const selectRow = currentRow.find("input[name='selectRow']").is(":checked");
           const content = currentRow.find("textarea[name='content']").val();
@@ -379,7 +371,6 @@
                   const data = JSON.parse(jsonString);
                   rtnToken = data.token;
                   if (token == rtnToken) {
-                    console.log();
                     const timestamp = new Date().toLocaleTimeString();
                     const logEntryHtml = `
                     <span class="log-item text-muted">[${timestamp}]</span>
@@ -418,114 +409,6 @@
 
     });
 
-    // 增加一個新行
-    function addNewRow(data) {
-      const tableBody = $('#tablebody');
-      const rowCount = tableBody.find('tr').length + 1;
-
-      // 創建新行
-      const newRow = $('<tr></tr>');
-
-      // 序號
-      const Cell1 = $('<td></td>').text(rowCount).css('text-align', 'center');
-
-      // 排序
-      const sortInput = $('<select></select>').addClass('form-select').attr('name', 'lstSeqNo');
-      for (let i = 1; i <= 5; i++) {
-        if (data && data.seqno == i) {
-          sortInput.append($('<option></option>').val(i).text(i).attr("selected", "selected"));
-        } else {
-          sortInput.append($('<option></option>').val(i).text(i));
-        }
-      }
-
-      const Cell2 = $('<td></td>').append(sortInput);
-
-      // 內容
-      const nameTextarea = $('<textarea></textarea>').addClass('form-control').attr('name', 'content').attr('rows', 3);
-      if (data) {
-        nameTextarea.val(data.content);
-      }
-
-      //有空這邊條一下
-      var type = data.type == "click" ? "text" : data.type;
-      const hidType = $("<input/>").attr('type', 'hidden').attr('name', 'hidType').val(type);
-
-      var hidMode;
-      if (data) {
-        hidMode = $("<input/>").attr('type', 'hidden').attr('name', 'hidMode').val(data.mode);
-      } else {
-        hidMode = $("<input/>").attr('type', 'hidden').attr('name', 'hidMode').val("n");
-      }
-
-      const Cell3 = $('<td></td>').append(nameTextarea).append(hidType).append(hidMode);
-
-      // 動作按鈕
-      const adjustButton = $('<button></button>').addClass('btn btn-info btn-sm mb-1 w-100').text('展開');
-      const shrinkButton = $('<button></button>').addClass('btn btn-secondary btn-sm mb-1 w-100').text('縮回');
-      const deleteButton = $('<button></button>').addClass('btn btn-danger btn-sm w-100').text('刪除');
-
-      const buttonDiv = $('<div></div>').addClass('d-flex flex-column align-items-center');
-      buttonDiv.append(adjustButton, shrinkButton, deleteButton);
-
-      const Cell4 = $('<td></td>').append(buttonDiv).addClass('text-center text-nowrap');
-
-      // 將所有單元格添加到新行
-      newRow.append(Cell1, Cell2, Cell3, Cell4);
-
-      // 將新行添加到表格主體
-      tableBody.append(newRow);
-
-      // 綁定事件監聽器
-      adjustButton.on('click', adjustTextareaHeight);
-      shrinkButton.on('click', shrinkTextareaHeight);
-      deleteButton.on('click', deleteRow);
-    }
-
-    // 刪除一個行
-    function deleteRow() {
-      // 使用 $(this) 取得被點擊的按鈕
-      $(this).closest('tr').remove();
-      reorderRows();
-    }
-
-    // 重新排序序號
-    function reorderRows() {
-      $('#tablebody tr').each(function (index) {
-        $(this).find('td:first').text(index + 1);
-      });
-    }
-
-    // 調整 textarea 高度
-    function adjustTextareaHeight() {
-      const textarea = $(this).closest('tr').find('textarea');
-      if (textarea.length) {
-        textarea.css('height', 'auto').css('height', textarea[0].scrollHeight + 'px');
-      }
-    }
-
-    // 縮回 textarea 高度
-    function shrinkTextareaHeight() {
-      const textarea = $(this).closest('tr').find('textarea');
-      if (textarea.length) {
-        textarea.css('height', '').attr('rows', 3);
-      }
-    }
-
-    // 處理檔案
-    async function handleFile(event) {
-      var files = event.target.files[0];
-      var reader = new FileReader();
-      reader.onloadend = (function (file) {
-        return function (evt) {
-          var baseSplit = evt.target.result.split(",");
-          var base64 = baseSplit[1];
-          uploadFile(file, base64);
-        };
-      })(files);
-      reader.readAsDataURL(files);
-    }
-
     async function uploadFile(file, base64) {
       try {
         const response = await fetch('/uploadfile', {
@@ -550,12 +433,6 @@
 
         console.log('Success:', result);
         alert('資料儲存成功！');
-
-        const jsonobj = {};
-        jsonobj.content = file.name;
-        jsonobj.type = "file";
-        jsonobj.mode = "n"
-        addNewRow(jsonobj);
 
         if (typeof dataTable !== 'undefined' && dataTable !== null) {
           dataTable.row.add({
@@ -607,33 +484,10 @@
       </div>
     </div>
 
-    <div class="card mb-4" style="display: none;">
-      <div class="card-body p-0">
-        <div class="table-responsive">
-          <table id="table1" class="table table-striped table-bordered mb-0">
-            <thead>
-              <tr>
-                <th class="text-center" style="width: 50px;">序</th>
-                <th class="text-center" style="width: 10%;">執行序列</th>
-                <th class="text-center" style="width: 75%;">內容</th>
-                <th class="text-center" style="width: 180px;">
-                  <button class="btn btn-primary btn-sm" id="btnAdd">新增</button>
-                  <!-- <button class="btn btn-success btn-sm" id="btnFileUpdate">檔案上傳</button>
-                  <input type="file" id="fileInput" style="display: none;"> -->
-                </th>
-              </tr>
-            </thead>
-            <tbody id="tablebody">
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-
     <div class="card mb-4">
       <div class="card-body p-0">
         <div class="table-responsive">
-          <table id="table2" class="table table-striped table-bordered mb-0">
+          <table id="table1" class="table table-striped table-bordered mb-0">
             <thead>
               <tr>
                 <th class="text-center" style="width: 7%;">序號</th>
