--- a/templates/detail.html
+++ b/templates/detail.html
@@ -483,6 +483,9 @@
         </div>
       </div>
     </div>
+    <div>
+      在「免費方案」下，對 gemini-2.5-pro 請求限制是每分鐘 2 次請求，超過了會被拒絕。
+    </div>
 
     <div class="card mb-4">
       <div class="card-body p-0">
