--- a/templates/index.html
+++ b/templates/index.html
@@ -64,6 +64,10 @@
       $('#btnNew').click(function () {
         location.href = "/detail?id=''";
       });
+      $('#btnHistory').click(function () {
+        location.href = "/history?id=''";
+      });
+
 
       // 初始化 DataTable
       var dataTable = $('#table1').DataTable({
@@ -150,6 +154,10 @@
         <div class="mb-3" style="display: flex;justify-content: flex-end;">
           <button class="btn btn-success" id="btnNew">新增</button>
         </div>
+        <div class="mb-3" style="display: flex;justify-content: flex-end;">
+          <button class="btn btn-success" id="btnHistory">看先前生成</button>
+        </div>
+
         <div class="table-responsive">
           <table id="table1" class="table table-striped table-bordered" style="width:100%">
             <thead>
