--- a/templates/detail.html
+++ b/templates/detail.html
@@ -6,10 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>詳細內容</title>
   <script src="{{ url_for('static', filename='js/jquery-3.7.1.min.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/datatables.min.js') }}"></script>
+  <!-- <script src="{{ url_for('static', filename='js/datatables.min.js') }}"></script> -->
+  <script src="{{ url_for('static', filename='js/datatables.1.13.6.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/dataTables.rowReorder.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/bootstrap/bootstrap.min.js') }}"></script>
 
   <link rel="stylesheet" href="{{ url_for('static', filename='css/dataTables.min.css') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/rowReorder.dataTables.min.css') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome/6.4.2/all.min.css') }}" />
   <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap/bootstrap.min.css') }}" />
   <style>
     #log-message {
@@ -115,6 +119,11 @@
       transform: scale(1.2);
       /* 或者用 transform: scale() 讓它變大，這在不同瀏覽器支援度更好 */
     }
+
+    /* 讓拖曳的把手顯示為可移動的鼠標樣式 */
+    .drag-handle {
+      cursor: move;
+    }
   </style>
 
   <script>
@@ -154,9 +163,10 @@
           { // 序號
             data: null, orderable: false,
             render: function (data, type, row, meta) {
-              return meta.row + 1;
+              var index = meta.row + 1
+              return '<i class="fa-solid fa-grip-vertical"></i> ' + index;
             },
-            className: "text-center"
+            className: "text-center drag-handle"
           },
           { // 勾選欄位
             data: null,
@@ -191,14 +201,6 @@
               }
             }
           },
-          { // 預留拖曳排序
-            data: null,
-            orderable: false, // 勾選欄位通常不需排序
-            className: "text-center",
-            render: function (data, type, row, meta) {
-              return "";
-            }
-          },
           {
             data: null, orderable: false,
             render: function (data, type, row) {
@@ -211,6 +213,12 @@
             }
           }
         ],
+        // 【新增點】啟用 RowReorder 功能
+        rowReorder: {
+          selector: 'td.drag-handle', // 指定哪個元素是拖曳的把手
+          dataSrc: 'sortOrder',        // 指定用來排序的資料來源欄位
+          update: false                // 設定為 false，我們將在 event listener 中手動更新
+        },
         language: {
           "sProcessing": "處理中...",
           "sLengthMenu": "顯示 _MENU_ 筆結果",
@@ -288,6 +296,26 @@
         $('#selectAllRows').prop('checked', allChecked);
       });
 
+      // // 【新增點】監聽拖曳完成後的事件
+      // dataTable.on('row-reorder', function (e, diff, edit) {
+      //   // 暫時禁用 DataTables 的排序功能，避免在我們更新資料時觸發不必要的重排序
+      //   dataTable.order.fixed(true);
+
+      //   // diff 參數包含了所有被移動的行的資訊
+      //   // 我們需要遍歷它，來更新我們 jsondata 陣列中的 sortOrder
+      //   for (let i = 0, ien = diff.length; i < ien; i++) {
+      //     let rowData = dataTable.row(diff[i].node).data();
+      //     rowData.sortOrder = diff[i].newPosition; // 更新該行資料的 sortOrder
+      //   }
+
+      //   // 重新啟用 DataTables 的排序功能
+      //   dataTable.order.fixed(false);
+
+      //   // 重新繪製表格，但保持在當前頁面，這樣序號欄位 (meta.row + 1) 會被正確更新
+      //   dataTable.draw(false);
+
+      // });
+
       $('#btnSave').click(async function () {
         var jsonArray = []
 
@@ -300,6 +328,7 @@
           const mode = currentRow.find("input[name='hidMode']").val();
 
           var jsonObject = {};
+          jsonObject.sortOrder = currentRow.index();
           jsonObject.content = (type == "file" ? filename : content);
           jsonObject.type = type;
           jsonObject.mode = mode;
@@ -493,10 +522,9 @@
           <table id="table1" class="table table-striped table-bordered mb-0">
             <thead>
               <tr>
-                <th class="text-center" style="width: 7%;">序號</th>
-                <th class="text-center" style="width: 7%;"></th>
+                <th class="text-center" style="width: 5%;">序號</th>
+                <th class="text-center" style="width: 10%;"></th>
                 <th class="text-center" style="width: 70%;">內容</th>
-                <th class="text-center" style="width: 5%;"></th>
                 <th class="text-center" style="width: 10%;">
                   <button class="btn btn-primary btn-sm" id="btnAddRow">新增</button>
                   <button class="btn btn-success btn-sm" id="btnFileUpdate">檔案上傳</button>
