--- a/templates/detail.html
+++ b/templates/detail.html
@@ -508,12 +508,14 @@
           <select class="form-select" id="lstModel">
             <option value="gemini-2.5-pro" selected="selected">gemini-2.5-pro</option>
             <option value="gemini-2.5-flash">gemini-2.5-flash</option>
+            <option value="gemini-2.5-flash-lite">gemini-2.5-flash-lite</option>                    
           </select>
         </div>
       </div>
     </div>
     <div>
-      在「免費方案」下，對 gemini-2.5-pro 請求限制是每分鐘 2 次請求，超過了會被拒絕。
+      在「免費方案」下，對 gemini-2.5-pro 請求限制是每分鐘 2 次請求，超過了會被拒絕。<br/>
+      gemini-2.5-pro的每日使用次數為50次
     </div>
 
     <div class="card mb-4">
