--- a/templates/detail.html
+++ b/templates/detail.html
@@ -508,7 +508,8 @@
           <select class="form-select" id="lstModel">
             <option value="gemini-2.5-pro" selected="selected">gemini-2.5-pro</option>
             <option value="gemini-2.5-flash">gemini-2.5-flash</option>
-            <option value="gemini-2.5-flash-lite">gemini-2.5-flash-lite</option>                    
+            <option value="gemini-2.5-flash-lite">gemini-2.5-flash-lite</option>        
+            <option value="gemini-flash-latest">gemini-flash-latest</option>                      
           </select>
         </div>
       </div>
