--- a/templates/history.html
+++ b/templates/history.html
@@ -62,7 +62,7 @@
         dataTable.destroy();
         $('#table1 tbody').empty();
       }
-
+      console.log(jsondata)
       dataTable = $('#table1').DataTable({
         data: jsondata,
         columns: [
@@ -73,11 +73,21 @@
             },
             className: "text-center"
           },
+           { // 勾選欄位
+            data: null,
+            orderable: false,
+            className: "text-center",
+            render: function (data, type, row, meta) {
+              // 為每行資料增加一個 checkbox
+              const rowCheck = $("<input/>").attr({ type: "checkbox", name: "selectRow" });
+              return $("<div/>").append(rowCheck).html();
+            }
+          },
           {
             data: 'filename',
-            // render: function (data, type, row) {
-
-            // }
+          },
+          {
+            data: 'createtime',
           },
           {
             data: null, orderable: false,
@@ -198,8 +208,10 @@
           <table id="table1" class="table table-striped table-bordered mb-0">
             <thead>
               <tr>
-                <th class="text-center" style="width: 7%;">序號</th>
+                <th class="text-center" style="width: 5%;">序號</th>
+                <th class="text-center" style="width: 5%;"></th>
                 <th class="text-center" style="width: 70%;">檔名</th>
+                <th class="text-center" style="width: 15%;">建立時間</th>
                 <th class="text-center" style="width: 5%;"></th>
               </tr>
             </thead>
