--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
         location.href = "/detail?id=''";
       });
       $('#btnHistory').click(function () {
-        location.href = "/history?id=''";
+        location.href = "/history";
       });
 
 
