--- a/templates/detail.html
+++ b/templates/detail.html
@@ -307,7 +307,7 @@
         $('#selectAllRows').prop('checked', allChecked);
       });
 
-      $('#btnSave').click(async function () {
+      $('.btnSave').click(async function () {
         var jsonArray = []
 
         $("#table1 tbody tr").each(function () {
@@ -341,9 +341,9 @@
 
       });
 
-      $('#btnRun').click(async function () {
+      $('.btnRun').click(async function () {
 
-        await $('#btnSave').click();
+        await $('.btnSave').click();
 
         token = Math.floor(Math.random() * 1000000);
         var id = $('#hidId').val();
@@ -353,9 +353,6 @@
         const $logContainer = $('#log-container');
         $logMessage.empty();
         $logContainer.empty();
-
-        const $submitBtn = $('.btnRun');
-        $submitBtn.prop('disabled', true).text('執行中...');
 
         try {
           const response = await fetch('/detail/runbyid', {
@@ -436,9 +433,7 @@
           console.error("Fetch 請求失敗:", err);
           const $errorEntry = $('<div>').html('<span class="log-error">與伺服器的連線發生錯誤，請檢查後端日誌或網路連線。</span>');
           $logContainer.append($errorEntry);
-        } finally {
-          $submitBtn.prop('disabled', false).text('執行');
-        }
+        } 
       })
 
     });
@@ -520,7 +515,8 @@
         </div>
         <div class="col-md-4">
           <select class="form-select" id="lstModel">
-            <option value="gemini-2.5-pro" selected="selected">gemini-2.5-pro</option>
+            <option value="gemini-3-flash-preview" selected="selected">gemini-3-flash-preview</option>
+            <option value="gemini-2.5-pro">gemini-2.5-pro</option>
             <option value="gemini-2.5-flash">gemini-2.5-flash</option>
             <option value="gemini-2.5-flash-lite">gemini-2.5-flash-lite</option>
             <option value="gemini-flash-latest">gemini-flash-latest</option>
@@ -539,6 +535,10 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="text-center mt-4">
+      <button id="btnSave2" class="btnSave btn btn-primary">儲存</button>
+      <button id="btnRun2" class="btnRun btn btn-success">執行</button>
     </div>
     <div>
       在「免費方案」下，對 gemini-2.5-pro 請求限制是每分鐘 2 次請求，超過了會被拒絕。<br />
@@ -570,8 +570,8 @@
 
     <div class="text-center mt-4">
       <button id="btnBack" class="btn btn-primary">上一頁</button>
-      <button id="btnSave" class="btn btn-primary">儲存</button>
-      <button id="btnRun" class="btn btn-success">執行</button>
+      <button id="btnSave" class="btnSave btn btn-primary">儲存</button>
+      <button id="btnRun" class="btnRun btn btn-success">執行</button>
     </div>
 
     <div class="card shadow-lg mt-4">
