--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,9 @@
       $('#btnHistory').click(function () {
         location.href = "/history";
       });
-
+      $('#btnBackup').click(function () {
+        location.href = "/backup";
+      });
 
       // 初始化 DataTable
       var dataTable = $('#table1').DataTable({
@@ -151,13 +153,11 @@
     <main>
       <div class="card p-4 shadow-lg mb-4">
         <h2 class="card-title h4 mb-3">自動化提交工具</h2>
-        <div class="mb-3" style="display: flex;justify-content: flex-end;">
+        <div class="mb-3">
           <button class="btn btn-success" id="btnNew">新增</button>
-        </div>
-        <div class="mb-3" style="display: flex;justify-content: flex-end;">
           <button class="btn btn-success" id="btnHistory">看先前生成</button>
+          <button class="btn btn-info" id="btnBackup">前往備份Google AI Studio</button>
         </div>
-
         <div class="table-responsive">
           <table id="table1" class="table table-striped table-bordered" style="width:100%">
             <thead>
